# Zafir

./: .dockerignore  .render-builddir.json  Dockerfile  Procfile  README.md  RENDER_DEPLOY.md  backend_test.py  build.sh  render.dockerfile  render.yaml  render_start.sh  requirements.txt  server.py  vercel.json
backend/: .env  .env.example  .gitignore  Procfile  README.md  alembic.ini  asgi.py  constraints.txt  create_admin.py  create_admin_runner.py  create_admin_shell.py  db.sqlite3  gunicorn.conf.py  gunicorn_config.py  inspect_env.py  install.sh  main.py  manage.py  pyproject.toml  render.yaml  render_app.py  requirements.txt  run.py  seed_data.py  smoke_tests.py  start.sh  test_pg8000.py  wsgi.py  zafir.db
backend/alembic/: env.py
backend/alembic/versions/: 24f31688801f_update_quotes_table.py  9acfdf6c5274_update_json_type.py  a21b17b905a0_initial_migration.py  c657269a2f9d_add_procedures_and_surgeons_tables.py
backend/app/: main.py
backend/app/api/: endpoints.py
backend/app/core/: config.py  database.py
backend/app/models/: quote.py  sql_models.py
backend/app/services/: database_service.py  pdf_service.py  sql_database_service.py
backend/backend/: settings.py  urls.py
backend/core/: config.py  database.py
backend/models/: sql_models.py
backend/quotes/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/quotes/migrations/: 0001_initial.py
backend/scripts/: seed_data.py
backend/services/: logging_service.py  sql_database_service.py
backend/zafir_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .env  (+4 more)
(+6 files in other folders)
